--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
    <a href="https://www.cdc.gov/coronavirus/2019-ncov/index.html" class="btn">See More about COVID-19</a>
   </header>
   <div class="top-box top-box-a">
-   <h3>USA Cases</h4>
+   <h3>Latest Total USA Cases</h4>
    <p class="price us-case-confirmed">Loading...</p> 
    <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
    <a href="https://covid19-api.org/" class="btn">Data Source</a> 
   </div>
   <div class="top-box top-box-b">
-   <h3>USA Deaths</h4>
+   <h3>Latest Total USA Deaths</h4>
    <p class="price us-case-death">Loading...</p>
    <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
    <a href="https://covid19-api.org" class="btn">Data Source</a> 
