--- a/globalcases.html
+++ b/globalcases.html
@@ -57,7 +57,7 @@
   </header>
   <div class="top-box top-box-a">
    <h3>Global Cases</h4>
-   <p class="price us-case-confirmed">Number of Cases</p>
+   <p class="price us-case-confirmed">Latest Total Number of Cases</p>
    <p class="price us-case-date-top"></p>
    <p class="price us-testing"></p>  
    <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
@@ -65,7 +65,7 @@
   </div>
   <div class="top-box top-box-b">
    <h3>Global Deaths</h4>
-   <p class="price us-case-death">Number of Death</p>
+   <p class="price us-case-death">Latest Total Number of Death</p>
    <p class="price us-case-date-bot"></p>
    <p class="price us-testing-two"></p>  
    <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
@@ -82,7 +82,7 @@
   </div>
   <div class="box">
    <i class="fas fa-chart-pie fa-4x"></i>
-   <h3>Tables and Charts</h3>
+   <h3>Graphs and Charts</h3>
    <p>Data Visualization</p>
   </div>
  </section>
