--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <link rel="preload" href="https://unpkg.com/swiper/swiper-bundle.min.css" as="style" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="https://code.highcharts.com/highcharts.js"></script>
   <link rel="prefetch" href="globalcases.html">
   <title>COVID-19 Tracker</title>
 </head>
