--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@
      </select>
    </div>
 <div class="data-table-covid-track"> 
-  <table class="covid-track-table">
+  <table class="covid-track-table" id="datatable">
     <thead>
      <tr>
       <th scope="col">States Name</th> 
