--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
    <!-- Browser Support Banner -->
    <div class="banner-support">
-    <a href="https://barbariceric.github.io/COVID-19-Analytics/">
+    <a href="https://barbariceric.github.io/COVID-19-Tracker/">
      <img src="img/banner-logo.png" alt="logo" class="banner-logo"/>
     </a>
     <div class="browser-support-icon">
@@ -61,7 +61,7 @@
   <!-- Top Container -->
  <section class="top-container">
   <header class="showcase">
-   <h1>COVID-19 Analytics </h1>
+   <h1>COVID-19 Tracker</h1>
    <p>Welcome</p>
    <a href="https://www.cdc.gov/coronavirus/2019-ncov/index.html" class="btn">See More about COVID-19</a>
   </header>
@@ -3409,10 +3409,10 @@
   <!-- <img src="img/hamburguesa.svg" class="hamburger" alt="news-menuicon"/> -->
 </footer>
 
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>    
-<script defer src="js/main.js"></script>
-<script async src="js/dataviz.js"></script>
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> 
 <script defer src="js/swiperaction.js"></script>
+<script async src="js/dataviz.js"></script>
 <script async src="js/datacollection.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
