--- a/index.html
+++ b/index.html
@@ -3413,6 +3413,6 @@
 <script defer src="js/swiperaction.js"></script>
 <script async src="js/dataviz.js"></script>
 <script async src="js/datacollection.js"></script>
-<script src="js/main.js"></script>
+<script defer src="js/main.js"></script>
 </body>
 </html>
