--- a/globalcases.html
+++ b/globalcases.html
@@ -87,6 +87,361 @@
   </div>
  </section>
     
+<section class="info">
+  <div class="Tabular-data">
+  <div class="info-table-title">
+   <h2>John Hopkins University</h2>
+   <p class="price">***Note: "NA" fields indicate unavailable data</p>
+   <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a>
+  </div>
+  <div class="FilterRow">
+    <input id="searchBarJh" placeholder="Search By States" class="searchBar">
+    <select id="sourceSelJh" class="sourceSel">
+      <option value="John Hopkins University Data" selected="selected">John Hopkins University Data</option>
+      <option value="COVID Tracking Project Data">COVID Tracking Project Data</option>
+      <option value="New York Times Data">New York Times Data</option>
+     </select>
+   </div>
+  <div class="data-table-john-hopkins"> 
+   <table class="john-hopkins-table">
+    <thead>
+     <tr>
+      <th scope="col">States Name</th> 
+      <th scope="col">Total Cases</th>
+      <th scope="col">Total Deaths</th>
+      <th scope="col">Last Updated</th> 
+     </tr> 
+    </thead>
+    <tbody>
+     <tr>
+      <td scope="row">United States</td>
+      <td class="us-johnhopkins-confirm"></td>
+      <td class="us-johnhopkins-death"></td>
+      <td class="us-johnhopkins-recent"></td>
+     </tr>
+     <tr>
+      <td scope="row">Alabama</td>
+      <td class="us-johnhopkins-al-confirm"></td>
+      <td class="us-johnhopkins-al-death"></td>
+      <td class="us-johnhopkins-al-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">Alaska</td>
+      <td class="us-johnhopkins-ak-confirm"></td>
+      <td class="us-johnhopkins-ak-death"></td>
+      <td class="us-johnhopkins-ak-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">American Samoa</td>
+      <td class="us-johnhopkins-as-confirm"></td>
+      <td class="us-johnhopkins-as-death"></td>
+      <td class="us-johnhopkins-as-recent"></td>       
+     </tr>
+      <td scope="row">Arizona</td>
+      <td class="us-johnhopkins-az-confirm"></td>
+      <td class="us-johnhopkins-az-death"></td>
+      <td class="us-johnhopkins-az-recent"></td>       
+     </tr>
+      <td scope="row">Arkansas</td>
+      <td class="us-johnhopkins-ar-confirm"></td>
+      <td class="us-johnhopkins-ar-death"></td>
+      <td class="us-johnhopkins-ar-recent"></td>       
+     </tr>
+      <td scope="row">California</td>
+      <td class="us-johnhopkins-ca-confirm"></td>
+      <td class="us-johnhopkins-ca-death"></td>
+      <td class="us-johnhopkins-ca-recent"></td>       
+     </tr>
+      <td scope="row">Colorado</td>
+      <td class="us-johnhopkins-co-confirm"></td>
+      <td class="us-johnhopkins-co-death"></td>
+      <td class="us-johnhopkins-co-recent"></td>       
+     </tr>
+      <td scope="row">Connecticut</td>
+      <td class="us-johnhopkins-ct-confirm"></td>
+      <td class="us-johnhopkins-ct-death"></td>
+      <td class="us-johnhopkins-ct-recent"></td>       
+     </tr>
+      <td scope="row">Delaware</td>
+      <td class="us-johnhopkins-de-confirm"></td>
+      <td class="us-johnhopkins-de-death"></td>
+      <td class="us-johnhopkins-de-recent"></td>       
+     </tr>
+      <td scope="row">District of Columbia</td>
+      <td class="us-johnhopkins-dc-confirm"></td>
+      <td class="us-johnhopkins-dc-death"></td>
+      <td class="us-johnhopkins-dc-recent"></td>       
+     </tr>
+      <td scope="row">Florida</td>
+      <td class="us-johnhopkins-fl-confirm"></td>
+      <td class="us-johnhopkins-fl-death"></td>
+      <td class="us-johnhopkins-fl-recent"></td>       
+     </tr>
+      <td scope="row">Georgia</td>
+      <td class="us-johnhopkins-ga-confirm"></td>
+      <td class="us-johnhopkins-ga-death"></td>
+      <td class="us-johnhopkins-ga-recent"></td>       
+     </tr>
+      <td scope="row">Guam</td>
+      <td class="us-johnhopkins-gu-confirm"></td>
+      <td class="us-johnhopkins-gu-death"></td>
+      <td class="us-johnhopkins-gu-recent"></td>       
+     </tr>
+      <td scope="row">Hawaii</td>
+      <td class="us-johnhopkins-hi-confirm"></td>
+      <td class="us-johnhopkins-hi-death"></td>
+      <td class="us-johnhopkins-hi-recent"></td>       
+     </tr>
+      <td scope="row">Idaho</td>
+      <td class="us-johnhopkins-id-confirm"></td>
+      <td class="us-johnhopkins-id-death"></td>
+      <td class="us-johnhopkins-id-recent"></td>       
+     </tr>
+      <td scope="row">Illinois</td>
+      <td class="us-johnhopkins-il-confirm"></td>
+      <td class="us-johnhopkins-il-death"></td>
+      <td class="us-johnhopkins-il-recent"></td>       
+     </tr>
+      <td scope="row">Indiana</td>
+      <td class="us-johnhopkins-in-confirm"></td>
+      <td class="us-johnhopkins-in-death"></td>
+      <td class="us-johnhopkins-in-recent"></td>       
+     </tr>
+      <td scope="row">Iowa</td>
+      <td class="us-johnhopkins-ia-confirm"></td>
+      <td class="us-johnhopkins-ia-death"></td>
+      <td class="us-johnhopkins-ia-recent"></td>       
+     </tr>
+      <td scope="row">Kansas</td>
+      <td class="us-johnhopkins-ks-confirm"></td>
+      <td class="us-johnhopkins-ks-death"></td>
+      <td class="us-johnhopkins-ks-recent"></td>       
+     </tr>
+      <td scope="row">Kentucky</td>
+      <td class="us-johnhopkins-ky-confirm"></td>
+      <td class="us-johnhopkins-ky-death"></td>
+      <td class="us-johnhopkins-ky-recent"></td>       
+     </tr>
+      <td scope="row">Louisiana</td>
+      <td class="us-johnhopkins-la-confirm"></td>
+      <td class="us-johnhopkins-la-death"></td>
+      <td class="us-johnhopkins-la-recent"></td>       
+     </tr>
+      <td scope="row">Maine</td>
+      <td class="us-johnhopkins-me-confirm"></td>
+      <td class="us-johnhopkins-me-death"></td>
+      <td class="us-johnhopkins-me-recent"></td>       
+     </tr>
+     </tr>
+      <td scope="row">Maryland</td>
+      <td class="us-johnhopkins-md-confirm"></td>
+      <td class="us-johnhopkins-md-death"></td>
+      <td class="us-johnhopkins-md-recent"></td>       
+     </tr>
+     </tr>
+      <td scope="row">Massachusetts</td>
+      <td class="us-johnhopkins-ma-confirm"></td>
+      <td class="us-johnhopkins-ma-death"></td>
+      <td class="us-johnhopkins-ma-recent"></td>       
+     </tr>
+     </tr>
+      <td scope="row">Michigan</td>
+      <td class="us-johnhopkins-mi-confirm"></td>
+      <td class="us-johnhopkins-mi-death"></td>
+      <td class="us-johnhopkins-mi-recent"></td>       
+     </tr>
+     </tr>
+      <td scope="row">Minnesota</td>
+      <td class="us-johnhopkins-mn-confirm"></td>
+      <td class="us-johnhopkins-mn-death"></td>
+      <td class="us-johnhopkins-mn-recent"></td>       
+     </tr>
+     </tr>
+      <td scope="row">Mississippi</td>
+      <td class="us-johnhopkins-ms-confirm"></td>
+      <td class="us-johnhopkins-ms-death"></td>
+      <td class="us-johnhopkins-ms-recent"></td>       
+     </tr>
+     </tr>
+      <td scope="row">Missouri</td>
+      <td class="us-johnhopkins-mo-confirm"></td>
+      <td class="us-johnhopkins-mo-death"></td>
+      <td class="us-johnhopkins-mo-recent"></td>       
+     </tr>
+     </tr>
+      <td scope="row">Montana</td>
+      <td class="us-johnhopkins-mt-confirm"></td>
+      <td class="us-johnhopkins-mt-death"></td>
+      <td class="us-johnhopkins-mt-recent"></td>       
+     </tr>
+     </tr>
+      <td scope="row">Nebraska</td>
+      <td class="us-johnhopkins-ne-confirm"></td>
+      <td class="us-johnhopkins-ne-death"></td>
+      <td class="us-johnhopkins-ne-recent"></td>       
+     </tr>
+     </tr>
+      <td scope="row">Neveda</td>
+      <td class="us-johnhopkins-nv-confirm"></td>
+      <td class="us-johnhopkins-nv-death"></td>
+      <td class="us-johnhopkins-nv-recent"></td>       
+     </tr>
+     </tr>
+      <td scope="row">New Hampshire</td>
+      <td class="us-johnhopkins-nh-confirm"></td>
+      <td class="us-johnhopkins-nh-death"></td>
+      <td class="us-johnhopkins-nh-recent"></td>       
+     </tr>
+     </tr>
+      <td scope="row">New Jersey</td>
+      <td class="us-johnhopkins-nj-confirm"></td>
+      <td class="us-johnhopkins-nj-death"></td>
+      <td class="us-johnhopkins-nj-recent"></td>       
+     </tr>
+     </tr>
+      <td scope="row">New Mexico</td>
+      <td class="us-johnhopkins-nm-confirm"></td>
+      <td class="us-johnhopkins-nm-death"></td>
+      <td class="us-johnhopkins-nm-recent"></td>       
+     </tr>
+     </tr>
+      <td scope="row">New York</td>
+      <td class="us-johnhopkins-ny-confirm"></td>
+      <td class="us-johnhopkins-ny-death"></td>
+      <td class="us-johnhopkins-ny-recent"></td>       
+     </tr>
+     </tr>
+      <td scope="row">North Carolina</td>
+      <td class="us-johnhopkins-nc-confirm"></td>
+      <td class="us-johnhopkins-nc-death"></td>
+      <td class="us-johnhopkins-nc-recent"></td>       
+     </tr>
+     </tr>
+      <td scope="row">North Dakota</td>
+      <td class="us-johnhopkins-nd-confirm"></td>
+      <td class="us-johnhopkins-nd-death"></td>
+      <td class="us-johnhopkins-nd-recent"></td>       
+     </tr>
+     </tr>
+      <td scope="row">Northern Mariana Island</td>
+      <td class="us-johnhopkins-mp-confirm"></td>
+      <td class="us-johnhopkins-mp-death"></td>
+      <td class="us-johnhopkins-mp-recent"></td>       
+     </tr>
+     </tr>
+      <td scope="row">Ohio</td>
+      <td class="us-johnhopkins-oh-confirm"></td>
+      <td class="us-johnhopkins-oh-death"></td>
+      <td class="us-johnhopkins-oh-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">Oklahoma</td>
+      <td class="us-johnhopkins-ok-confirm"></td>
+      <td class="us-johnhopkins-ok-death"></td>
+      <td class="us-johnhopkins-ok-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">Oregon</td>
+      <td class="us-johnhopkins-or-confirm"></td>
+      <td class="us-johnhopkins-or-death"></td>
+      <td class="us-johnhopkins-or-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">Pennsylvania</td>
+      <td class="us-johnhopkins-pa-confirm"></td>
+      <td class="us-johnhopkins-pa-death"></td>
+      <td class="us-johnhopkins-pa-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">Puerto Rico</td>
+      <td class="us-johnhopkins-pr-confirm"></td>
+      <td class="us-johnhopkins-pr-death"></td>
+      <td class="us-johnhopkins-pr-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">Rhode Island</td>
+      <td class="us-johnhopkins-ri-confirm"></td>
+      <td class="us-johnhopkins-ri-death"></td>
+      <td class="us-johnhopkins-ri-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">South Carolina</td>
+      <td class="us-johnhopkins-sc-confirm"></td>
+      <td class="us-johnhopkins-sc-death"></td>
+      <td class="us-johnhopkins-sc-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">South Dakota</td>
+      <td class="us-johnhopkins-sd-confirm"></td>
+      <td class="us-johnhopkins-sd-death"></td>
+      <td class="us-johnhopkins-sd-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">Tennessee</td>
+      <td class="us-johnhopkins-tn-confirm"></td>
+      <td class="us-johnhopkins-tn-death"></td>
+      <td class="us-johnhopkins-tn-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">Texas</td>
+      <td class="us-johnhopkins-tx-confirm"></td>
+      <td class="us-johnhopkins-tx-death"></td>
+      <td class="us-johnhopkins-tx-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">US Virgin Island</td>
+      <td class="us-johnhopkins-vi-confirm"></td>
+      <td class="us-johnhopkins-vi-death"></td>
+      <td class="us-johnhopkins-vi-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">Utah</td>
+      <td class="us-johnhopkins-ut-confirm"></td>
+      <td class="us-johnhopkins-ut-death"></td>
+      <td class="us-johnhopkins-ut-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">Vermont</td>
+      <td class="us-johnhopkins-vt-confirm"></td>
+      <td class="us-johnhopkins-vt-death"></td>
+      <td class="us-johnhopkins-vt-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">Virginia</td>
+      <td class="us-johnhopkins-va-confirm"></td>
+      <td class="us-johnhopkins-va-death"></td>
+      <td class="us-johnhopkins-va-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">Washington</td>
+      <td class="us-johnhopkins-wa-confirm"></td>
+      <td class="us-johnhopkins-wa-death"></td>
+      <td class="us-johnhopkins-wa-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">West Virginia</td>
+      <td class="us-johnhopkins-wv-confirm"></td>
+      <td class="us-johnhopkins-wv-death"></td>
+      <td class="us-johnhopkins-wv-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">Wisconsin</td>
+      <td class="us-johnhopkins-wi-confirm"></td>
+      <td class="us-johnhopkins-wi-death"></td>
+      <td class="us-johnhopkins-wi-recent"></td>       
+     </tr>
+     <tr>
+      <td scope="row">Wyoming</td>
+      <td class="us-johnhopkins-wy-confirm"></td>
+      <td class="us-johnhopkins-wy-death"></td>
+      <td class="us-johnhopkins-wy-recent"></td>       
+     </tr>      
+    </tbody>
+   </table>
+  </div>
+ </div> 
+</section>
+
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>    
 <script defer src="js/main.js"></script>
 <script async src="js/dataviz.js"></script>
