--- a/globalcases.html
+++ b/globalcases.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, height=device-height, user-scalable=yes">
   <meta http-equi="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="COVID19 Analytics">
-  <meta name="author" content="ENDesign – COVID19 Analytics">
+  <meta name="description" content="COVID19 Tracker">
+  <meta name="author" content="ENDesign – Global COVID19 Tracker">
   <meta name="keywords" content="endesign, covid19, data, covid19 data, covid19 visualization">
   <script rel="preload" src="https://kit.fontawesome.com/a58fdcacc2.js" crossorigin="anonymous" as="script"></script>
   <script rel="dns-prefetch" src="https://kit.fontawesome.com/a58fdcacc2.js" as="script"></script>
@@ -20,7 +20,7 @@
   <link rel="preload" href="https://unpkg.com/swiper/swiper-bundle.min.css" as="style" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="prefetch" href="https://barbariceric.github.io/COVID-19-Analytics/">
-  <title>Global COVID-19 Analytics</title>
+  <title>Global COVID-19 Tracker</title>
 </head>
  <body>
     <!-- Browser Support Banner -->
@@ -442,11 +442,16 @@
  </div> 
 </section>
 
+<!-- Footer -->
+ <footer class="footer">
+  <p>ENDesign &copy; 2020</p>
+  <!-- <img src="img/hamburguesa.svg" class="hamburger" alt="news-menuicon"/> -->
+</footer>
+
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>    
 <script defer src="js/main.js"></script>
-<script async src="js/dataviz.js"></script>
+<script async src="js/globaldataviz.js"></script>
 <script defer src="js/swiperaction.js"></script>
-<!-- <script async src="js/datacollection.js"></script> -->
 <script async src="js/globaldatacollection.js"></script>      
 </body>
 </html>
