--- a/globalcases.html
+++ b/globalcases.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=0.75, user-scalable=yes">
+  <meta name="viewport" content="width=device-width, height=device-height, user-scalable=yes">
   <meta http-equi="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="COVID19 Tracker">
   <meta name="author" content="ENDesign – Global COVID19 Tracker">
@@ -449,7 +449,7 @@
 </footer>
 
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>    
-<script defer src="js/main.js"></script>
+<script defer src="js/globalmain.js"></script>
 <script async src="js/globaldataviz.js"></script>
 <script defer src="js/swiperaction.js"></script>
 <script async src="js/globaldatacollection.js"></script>      
