--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script src="https://code.highcharts.com/modules/data.js"></script>
   <link rel="prefetch" href="globalcases.html">
   <title>COVID-19 Tracker</title>
 </head>
@@ -1967,6 +1968,18 @@
     <!-- Swiper -->
   <div class="swiper-container swiper-infograph">
     <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <img data-src="img/Available Vaccines.jpg" alt="Available COVID19 Vaccine" class="swiper-lazy">
+        <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+      </div>
+      <div class="swiper-slide">
+        <img data-src="img/COVID19(1).jpg" alt="Picture of COVID19" class="swiper-lazy">
+        <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+      </div>
+      <div class="swiper-slide">
+        <img data-src="img/COVID19(2).jpg" alt="Secondary Picture of COVID19" class="swiper-lazy">
+        <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+      </div>
       <div class="swiper-slide">
         <!-- Required swiper-lazy class and image source specified in data-src attribute -->
         <img data-src="img/CDC Poster_stop-the-spread-of-germs_English-page-001.jpg" alt="COVID Spreading Germs English Infographic" class="swiper-lazy">
