--- a/index.html
+++ b/index.html
@@ -1423,7 +1423,9 @@
     </tbody>
    </table>
   <div class="price">COVID Tracking Charts
-    <div id="us-covidtrack-chart"></div>
+    <div id="us-covidtrack-newdeaths-chart"></div>
+    <div id="us-covidtrack-newcases-chart"></div>
+    <div id="us-covidtrack-total-chart"></div>
     <div id="us-covidtrack-average-chart"></div>
     <div id="us-covidtrack-state-chart"></div>
   </div>
