--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="https://code.highcharts.com/highcharts.js"></script>
   <script src="https://code.highcharts.com/modules/data.js"></script>
+  <script src="https://code.highcharts.com/stock/highstock.js"></script>
+  <script src="https://code.highcharts.com/stock/modules/data.js"></script>
   <link rel="prefetch" href="globalcases.html">
   <title>COVID-19 Tracker</title>
 </head>
