--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
    <h3>Graphs and Charts</h3>
    <p>Data Visualization</p>
   </div>
-  <div class="box">
+<!--  <div class="box">
    <i class="fas fa-globe fa-4x"></i>
    <h3>Geographic Map</h3>
    <p>Cases by Geographic Territories</p>
-  </div>
+  </div> -->
  </section>
     
 <!-- Info Section -->
