--- a/index.html
+++ b/index.html
@@ -877,7 +877,18 @@
 <div class="price">New York Times University Charts
  <div id="us-nytimes-chart"></div>
  <div id="us-nytimes-average-chart"></div>
- <div id="us-nytimes-state-chart"></div> 
+ <div class="showcase__section" id="bubble">
+  <div class="spacer --small"></div>
+  <div id="bubbleplots">
+    <div class="bubbleplot" data-num="0">
+      <div class="plot" id="us-nytimes-state-chart"></div>
+      <div class="control-row">
+        Country: <select class="countrydata">
+        </select>
+      </div>
+    </div>
+  </div>
+</div> 
 </div>
   </div>
   <div class="info-table-title">
