--- a/globalcases.html
+++ b/globalcases.html
@@ -106,7 +106,7 @@
    <table class="john-hopkins-table">
     <thead>
      <tr>
-      <th scope="col">States Name</th> 
+      <th scope="col">Countries Name</th> 
       <th scope="col">Total Cases</th>
       <th scope="col">Total Deaths</th>
       <th scope="col">Last Updated</th> 
@@ -115,15 +115,15 @@
     <tbody>
      <tr>
       <td scope="row">United States</td>
-      <td class="us-johnhopkins-confirm"></td>
-      <td class="us-johnhopkins-death"></td>
-      <td class="us-johnhopkins-recent"></td>
+      <td class="usCaseConfirm"></td>
+      <td class="usCaseDeath"></td>
+      <td class="usDate"></td>
      </tr>
      <tr>
-      <td scope="row">Alabama</td>
-      <td class="us-johnhopkins-al-confirm"></td>
-      <td class="us-johnhopkins-al-death"></td>
-      <td class="us-johnhopkins-al-recent"></td>       
+      <td scope="row">India</td>
+      <td class="inCaseConfirm"></td>
+      <td class="inCaseDeath"></td>
+      <td class="inDate"></td>       
      </tr>
      <tr>
       <td scope="row">Alaska</td>
