--- a/globalcases.html
+++ b/globalcases.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, height=device-height, user-scalable=yes">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=0.50 user-scalable=no">
   <meta http-equi="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="COVID19 Tracker">
   <meta name="author" content="ENDesign – Global COVID19 Tracker">
