--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
 </div>
   </div>
   <div class="info-table-title">
-   <h2>COVID Tracking Project</h2>
+   <h2>COVID Tracking Project <span class="covidtrackupdate">(COVID-19 Data after March 7,2021 is unavailable. Click for more information)</span></h2>
    <p class="price">***Note: "NA" fields indicate unavailable data</p>
    <a href="https://covidtracking.com/data" class="btn">Data Source</a>
   </div>
