--- a/globalcases.html
+++ b/globalcases.html
@@ -1390,6 +1390,7 @@
 <script defer src="js/globalmain.js"></script>
 <script async src="js/globaldataviz.js"></script>
 <script defer src="js/swiperaction.js"></script>
-<script async src="js/globaldatacollection.js"></script>      
+<script async src="js/globaldatacollection.js"></script>  
+<script src="js/anime.min.js"></script>    
 </body>
 </html>
