--- a/globalcases.html
+++ b/globalcases.html
@@ -1379,6 +1379,26 @@
   </div>
  </div> 
 </section>
+    
+<section>
+  <div>
+    <div id="test"></div>
+    <form>
+    <fieldset>
+    <legend>Countries</legend>
+    <button id="button" class="autocompare">Reset</button>
+    <select>
+       <option id ="button4">United States</option>
+       <option id ="button3">India</option>
+       <option id ="button2">Russia</option>
+       <option id ="button1">Canada</option>
+    </select>  
+    </fieldset>
+    </form>
+  </div>
+  <div id="test2"></div>
+  <div id="test3"></div> 
+</section>
 
 <!-- Footer -->
  <footer class="footer">
