--- a/index.html
+++ b/index.html
@@ -1989,7 +1989,7 @@
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
       <div class="swiper-slide">
-        <img data-src="img/covid-19_vaccination_mandatory.jpg" alt="Picture of COVID19" class="swiper-lazy">
+        <img data-src="img/covid-19_vaccination_mandatory.jpeg" alt="Infograph of Opinions on Vaccination Mandate" class="swiper-lazy">
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
       <div class="swiper-slide">
