--- a/globalcases.html
+++ b/globalcases.html
@@ -95,12 +95,12 @@
    <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a>
   </div>
   <div class="FilterRow">
-    <input id="searchBarJh" placeholder="Search By States" class="searchBar">
-    <select id="sourceSelJh" class="sourceSel">
-      <option value="John Hopkins University Data" selected="selected">John Hopkins University Data</option>
+    <input id="searchBarJh" placeholder="Search By Country" class="searchBar">
+    <!-- <select id="sourceSelJh" class="sourceSel">
+       <option value="John Hopkins University Data" selected="selected">John Hopkins University Data</option>
       <option value="COVID Tracking Project Data">COVID Tracking Project Data</option>
       <option value="New York Times Data">New York Times Data</option>
-     </select>
+     </select> -->
    </div>
   <div class="data-table-john-hopkins"> 
    <table class="john-hopkins-table">
@@ -1380,7 +1380,7 @@
  </div> 
 </section>
     
-<section>
+<section class="info">
   <div>
     <div id="test"></div>
     <form>
