--- a/globalcases.html
+++ b/globalcases.html
@@ -1387,7 +1387,7 @@
     <fieldset>
     <legend>Countries</legend>
     <button id="button" class="autocompare">Reset</button>
-    <select>
+    <select id="selectButton">
        <option id ="button4">United States</option>
        <option id ="button3">India</option>
        <option id ="button2">Russia</option>
