--- a/globalcases.html
+++ b/globalcases.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="endesign, covid19, data, covid19 data, covid19 visualization">
   <script rel="preload" src="https://kit.fontawesome.com/a58fdcacc2.js" crossorigin="anonymous" as="script"></script>
   <script rel="dns-prefetch" src="https://kit.fontawesome.com/a58fdcacc2.js" as="script"></script>
-  <script rel="preconnect" src="https://d3js.org/d3.v6.min.js" as="script" crossorigin></script>
-  <script rel="dns-prefetch" src="https://d3js.org/d3.v6.min.js" as="script"></script>
+  <script rel="preconnect" src="https://d3js.org/d3.v4.min.js" as="script" crossorigin></script>
+  <script rel="dns-prefetch" src="https://d3js.org/d3.v4.min.js" as="script"></script>
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" as="style" />
   <!-- <link rel="dns-prefetch" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" as="style" /> -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" />
@@ -19,13 +19,13 @@
   <link rel="stylesheet" type="text/css" href="css/style2.css" />
   <link rel="preload" href="https://unpkg.com/swiper/swiper-bundle.min.css" as="style" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-  <link rel="prefetch" href="https://barbariceric.github.io/COVID-19-Analytics/">
+  <link rel="prefetch" href="https://barbariceric.github.io/COVID-19-Tracker">
   <title>Global COVID-19 Tracker</title>
 </head>
  <body>
     <!-- Browser Support Banner -->
    <div class="banner-support">
-    <a href="https://barbariceric.github.io/COVID-19-Analytics/">
+    <a href="https://barbariceric.github.io/COVID-19-Tracker/globalcases">
      <img src="img/banner-logo.png" alt="logo" class="banner-logo"/>
     </a>
     <div class="browser-support-icon">
