--- a/globalcases.html
+++ b/globalcases.html
@@ -11,6 +11,7 @@
   <script rel="dns-prefetch" src="https://kit.fontawesome.com/a58fdcacc2.js" as="script"></script>
   <script rel="preconnect" src="https://d3js.org/d3.v4.min.js" as="script" crossorigin></script>
   <script rel="dns-prefetch" src="https://d3js.org/d3.v4.min.js" as="script"></script>
+  <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" as="style" />
   <!-- <link rel="dns-prefetch" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" as="style" /> -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" />
