--- a/globalcases.html
+++ b/globalcases.html
@@ -1387,7 +1387,7 @@
     <form>
     <fieldset>
     <legend>Countries</legend>
-    <button id="button" class="autocompare">Reset</button>
+    <!-- <button id="button" class="autocompare">Reset</button> -->
     <select id="selectButton">
        <option id ="button4">United States</option>
        <option id ="button3">India</option>
