--- a/index.html
+++ b/index.html
@@ -7715,6 +7715,16 @@
    </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>The Covid-19 Baby Bust Is Here</h3>
+     <p class="price">Source: Wall Street Journal, Published on March 4, 2021</p>
+     <a href="https://www.wsj.com/articles/the-covid-19-baby-bust-is-here-11614853803" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Oxford study indicates AstraZeneca effective against Brazil variant, source says</h3>
      <p class="price">Source: Reuters, Published on March 5, 2021</p>
      <a href="https://www.reuters.com/article/us-health-coronavirus-brazil-variant-exc/exclusive-oxford-study-indicates-astrazeneca-effective-against-brazil-variant-source-says-idUSKBN2AX1NS" class="btn">Link to Article</a>
@@ -7835,9 +7845,9 @@
    </div>   
 <div class="article-container">
     <div class="news-box news-box-a">
-     <h3></h3>
-     <p class="price">Source: , Published on March 5, 2021</p>
-     <a href="" class="btn">Link to Article</a>
+     <h3>Disney World Customers Spit on Workers Who Told Them to Follow Safety Rules</h3>
+     <p class="price">Source: Newsweek on MSN, Published on March 5, 2021</p>
+     <a href="https://www.msn.com/en-us/news/crime/disney-world-customers-spit-on-workers-who-told-them-to-follow-safety-rules/ar-BB1ehS0I" class="btn">Link to Article</a>
     </div>
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
