--- a/index.html
+++ b/index.html
@@ -2102,7 +2102,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>    
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Association of Daily Wear of Eyeglasses With Susceptibility to Coronavirus Disease 2019 Infection</h3>
+     <p class="price">Source: Jama Network, Published on September 16, 2020</p>
+     <a href="https://jamanetwork.com/journals/jamaophthalmology/fullarticle/2770872" class="btn">Link to Research Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
     <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Prevalence of SARS-CoV-2 antibodies in a large nationwide sample of patients on dialysis in the USA: a cross-sectional study</h3>
@@ -7420,7 +7430,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>     
+   </div>  
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Circulating Vitamin D levels status and clinical prognostic indices in COVID-19 patients</h3>
+     <p class="price">Source: BMC, Published on March 3, 2021</p>
+     <a href="https://doi.org/10.1186/s12931-021-01666-3" class="btn">Link to Research Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Estimated transmissibility and impact of SARS-CoV-2 lineage B.1.1.7 in England</h3>
@@ -7552,6 +7572,16 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>NIH-Sponsored ACTIV-3 Clinical Trial Closes Enrollment into Two Sub-Studies</h3>
+     <p class="price">Source: NIH, Published on March 4, 2021</p>
+     <a href="https://www.nih.gov/news-events/news-releases/nih-sponsored-activ-3-clinical-trial-closes-enrollment-into-two-sub-studies" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Beijing public health workers the least willing in China to get Covid-19 vaccine, survey finds</h3>
@@ -7722,6 +7752,46 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Effect of Ivermectin on Time to Resolution of Symptoms Among Adults With Mild COVID-19</h3>
+     <p class="price">Source: Jama Network, Published on March 4, 2021</p>
+     <a href="https://jamanetwork.com/journals/jama/fullarticle/2777389" class="btn">Link to Research Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Coronavirus and vaccine attitudes and behaviours in England: over 80s population, 15 February to 20 February 2021</h3>
+     <p class="price">Source: Office of National Statistic UK Gov, Published on March 4, 2021</p>
+     <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/healthandsocialcare/conditionsanddiseases/bulletins/coronavirusandvaccineattitudesandbehavioursinengland/over80spopulation15februaryto20february2021" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>SARS-CoV-2 on Ocular Surfaces in a Cohort of Patients With COVID-19 From the Lombardy Region, Italy</h3>
+     <p class="price">Source: Jama Network, Published on March 4, 2021</p>
+     <a href="https://jamanetwork.com/journals/jamaophthalmology/fullarticle/2777178" class="btn">Link to Research Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Azithromycin for community treatment of suspected COVID-19 in people at increased risk of an adverse clinical course in the UK (PRINCIPLE): a randomised, controlled, open-label, adaptive platform trial</h3>
+     <p class="price">Source: Lancet, Published on March 4, 2021</p>
+     <a href="https://doi.org/10.1016/S0140-6736(21)00461-X" class="btn">Link to Research Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
    </div>     
 <div class="article-container">
     <div class="news-box news-box-a">
@@ -7852,7 +7922,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>       
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>RECOVERY trial closes recruitment to colchicine treatment for patients hospitalised with COVID-19</h3>
+     <p class="price">Source: Recovery Trial, Published on March 5, 2021</p>
+     <a href="https://www.recoverytrial.net/news/recovery-trial-closes-recruitment-to-colchicine-treatment-for-patients-hospitalised-with-covid-19" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Impacts of introducing and lifting nonpharmaceutical interventions on COVID-19 daily growth rate and compliance in the United States</h3>
