--- a/globalcases.html
+++ b/globalcases.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=0.50 user-scalable=no">
+  <meta name="viewport" content="width=device-width, height=device-height, user-scalable=yes">
   <meta http-equi="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="COVID19 Tracker">
   <meta name="author" content="ENDesign – Global COVID19 Tracker">
@@ -20,13 +20,13 @@
   <link rel="stylesheet" type="text/css" href="css/style2.css" />
   <link rel="preload" href="https://unpkg.com/swiper/swiper-bundle.min.css" as="style" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-  <link rel="prefetch" href="https://barbariceric.github.io/COVID-19-Tracker">
+  <link rel="prefetch" href="https://barbariceric.github.io/COVID-19-Tracker/">
   <title>Global COVID-19 Tracker</title>
 </head>
  <body>
     <!-- Browser Support Banner -->
    <div class="banner-support">
-    <a href="https://barbariceric.github.io/COVID-19-Tracker/globalcases">
+    <a href="https://barbariceric.github.io/COVID-19-Tracker/">
      <img src="img/banner-logo.png" alt="logo" class="banner-logo"/>
     </a>
     <div class="browser-support-icon">
