--- a/index.html
+++ b/index.html
@@ -1434,13 +1434,104 @@
     </tbody>
    </table>
   <div class="price">COVID Tracking Charts
-    <div id="us-covidtrack-newcases-chart"></div>
-    <div id="us-covidtrack-newdeaths-chart"></div>
-    <div id="us-covidtrack-curhos-chart"></div>
-    <div id="us-covidtrack-curvent-chart"></div>
-    <div id="us-covidtrack-curicu-chart"></div>
-    <div id="us-covidtrack-totalcases-chart"></div>
-    <div id="us-covidtrack-totaldeaths-chart"></div>
+    <div id="us-covidtrack-newcases-chart">
+    <form>
+    <fieldset>
+    <legend>Countries</legend>
+    <button id="button" class="autocompare">United States</button> 
+    <select id="selectButton">
+       <option id ="button4">California</option>
+       <option id ="button3">Texas</option>
+       <option id ="button2">Arizona</option>
+       <option id ="button1">New York</option>
+    </select>  
+    </fieldset>
+    </form>
+    </div>
+    <div id="us-covidtrack-newdeaths-chart">
+    <form>
+    <fieldset>
+    <legend>Countries</legend>
+    <button id="button" class="autocompare">United States</button> 
+    <select id="selectButton">
+       <option id ="button4">California</option>
+       <option id ="button3">Texas</option>
+       <option id ="button2">Arizona</option>
+       <option id ="button1">New York</option>
+    </select>  
+    </fieldset>
+    </form>
+    </div>
+    <div id="us-covidtrack-curhos-chart">
+    <form>
+    <fieldset>
+    <legend>Countries</legend>
+    <button id="button" class="autocompare">United States</button> 
+    <select id="selectButton">
+       <option id ="button4">California</option>
+       <option id ="button3">Texas</option>
+       <option id ="button2">Arizona</option>
+       <option id ="button1">New York</option>
+    </select>  
+    </fieldset>
+    </form>
+    </div>
+    <div id="us-covidtrack-curvent-chart">
+    <form>
+    <fieldset>
+    <legend>Countries</legend>
+    <button id="button" class="autocompare">United States</button> 
+    <select id="selectButton">
+       <option id ="button4">California</option>
+       <option id ="button3">Texas</option>
+       <option id ="button2">Arizona</option>
+       <option id ="button1">New York</option>
+    </select>  
+    </fieldset>
+    </form>
+    </div>
+    <div id="us-covidtrack-curicu-chart">
+    <form>
+    <fieldset>
+    <legend>Countries</legend>
+    <button id="button" class="autocompare">United States</button> 
+    <select id="selectButton">
+       <option id ="button4">California</option>
+       <option id ="button3">Texas</option>
+       <option id ="button2">Arizona</option>
+       <option id ="button1">New York</option>
+    </select>  
+    </fieldset>
+    </form>
+    </div>
+    <div id="us-covidtrack-totalcases-chart">
+    <form>
+    <fieldset>
+    <legend>Countries</legend>
+    <button id="button" class="autocompare">United States</button> 
+    <select id="selectButton">
+       <option id ="button4">California</option>
+       <option id ="button3">Texas</option>
+       <option id ="button2">Arizona</option>
+       <option id ="button1">New York</option>
+    </select>  
+    </fieldset>
+    </form>
+    </div>
+    <div id="us-covidtrack-totaldeaths-chart">
+    <form>
+    <fieldset>
+    <legend>Countries</legend>
+    <button id="button" class="autocompare">United States</button> 
+    <select id="selectButton">
+       <option id ="button4">California</option>
+       <option id ="button3">Texas</option>
+       <option id ="button2">Arizona</option>
+       <option id ="button1">New York</option>
+    </select>  
+    </fieldset>
+    </form>
+    </div>
     <div id="us-covidtrack-state-chart"></div>
   </div>
   </div>
